Update Java runtime version to 25.0 (build 36)