@@ -177,6 +177,7 @@
             <!-- # Allow loading dynamic agent used by JOL -->
             -XX:+EnableDynamicAgentLoading
             ${extraJavaVectorArgs}
+            --sun-misc-unsafe-memory-access=allow
         </air.test.jvm.additional-arguments.default>
         <air.test.jvm.additional-arguments>${air.test.jvm.additional-arguments.default}</air.test.jvm.additional-arguments>
 
@@ -2859,6 +2860,11 @@
     <profiles>
         <profile>
             <id>errorprone-compiler</id>
+            <properties>
+                <!-- set java target to 25 to enable incubator linking -->
+                <project.build.targetJdk>25</project.build.targetJdk>
+                <air.java.version>25.0.0</air.java.version>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
